--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
-    };
+      // Your web app's Firebase configuration
+     const firebaseConfig = {
+    apiKey: "AIzaSyBnk-nw_01PWYOZe9UETgQnxJVP3gXDrhs",
+    authDomain: "ficharpg-7c4fc.firebaseapp.com",
+    projectId: "ficharpg-7c4fc",
+    storageBucket: "ficharpg-7c4fc.appspot.com",
+    messagingSenderId: "966877424396",
+    appId: "1:966877424396:web:124b673ed432d253f03729"
+  };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
